# PMDG-FMC

./: CMakeLists.txt  CMakePresets.json  DummyScreenSource.cpp  DummyScreenSource.h  FMC.cpp  FMC.h  FMCHandler.cpp  FMCHandler.h  Finally.h  FrontendHandler.cpp  FrontendHandler.h  MSFSScreenSource.cpp  MSFSScreenSource.h  PMDG_NG3_SDK.h  README.md  ScreenSource.h  event_definitions_inl.h  main.cpp  vcpkg.json
cmake/modules/: FindSimConnect.cmake
frontend/: asset-manifest.json  index.html  manifest.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Keypad.js  Letter.js  Row.js
frontend/static/css/: main.308d6a15.css  main.308d6a15.css.map
frontend/static/js/: 787.2f44abcf.chunk.js  787.2f44abcf.chunk.js.map  main.ff4a7752.js  main.ff4a7752.js.map
